# tickdb

./: .gitignore  Diagram1.dia  README
HumanReadablePCAP/wireshark_dissector/: readme.txt
Storage_System_Design/: README
archive/: BookData.py  Datamole_2_EOBI.py  README  csv2mongo.tar.xz  database_builder.tar.xz  dec.py  eternus_login.sh  hosts  obp2.py  zfs_stat_reporter.py
archive/Rough Design/: Tick DB Dataflow.vsdx
archive/UnitTest/: binary_file_hash.py
archive/database_builder/: Book.py  config.json  liquid_capture_update_db.py  qtg_ASX_file_decoder.py  qtg_CME_file_decoder.py  qtg_EOBI_file_decoder.py  qtg_KOSPI_file_decoder.py  qtg_MDP3_file_decoder.py
archive/database_builder/archive/: CMakeLists.txt  parallel_commands.py
archive/database_builder/archive/pcapfile/protocols/linklayer/: ethernet.py
archive/datamole/: datamole_run
archive/pcap_fetch/: README  TODO  config.py  mass_bz.py  pcap_merge.bench_timing  tests  ut.py
bar_checks/: .gitignore  commonlib.py  dataaccess.py  dataframeutils.py  env_setup.sh  holidaycalendar.py  htmlprocessor.py  influxcommon.py  quantdb1_config.py  requirements.txt  schedulefactory.py  timeutils.py  xmlconverter.py
bar_checks/PySaxon.egg-info/: PKG-INFO  top_level.txt
bar_checks/bar/: bar_check (copy).xml  bar_check.html  bar_check.xml  bar_check.xsl  bar_checks.xml  bardataaccess.py  baseconfig.py  check_results.xml  checktask_config.py  csvcheck.py  csvcheck_config.py  datastore_config.py  dbconfig.py  enrichedOHLCVN.py  frontmonthtask.py  frontmonthtask_config.py  lcmintquansim1_config.py  quantdb1_config.py  quantsim1_config.py  taskconfig.py  timeseries_check.html  timeseries_check.py  timeseries_check.xml  timeseries_check.xsl  timeseries_check_backup.xsl  timeseries_checks.xml
bar_checks/tests/: commonlib_tests.py  holidaycal_tests.py  htmlproc_tests.py  timeseriescheck_tests.py
bar_checks/timeutils/: commonfuncs.py  holidayschedule.py  scheduler.py  timeseries.py
bar_files/: bars_feed.py  epoch_utils.py  example.sim.json  example.strat.json  vendor_bars_feed.py
bar_files_csv_python/: bars_feed.py  vendor_bars_feed.py
cxx_influx/: CMakeLists.txt  build.sh
cxx_influx/cmake/: Findutil.cmake
cxx_influx/config/: asx_colo.csv  cme_colo.csv  eurex_colo.csv  hkfe_colo.csv  ose_colo.csv  product_to_colo_src.csv
cxx_influx/include/: Configuration.h  Dispatch.h  Find_Files_In_Parallel.h  Find_Tick_Files.h  Generate_Influx_Msg.h  Influx_Util.h  Log.h  Post.h  Scheduler.h  Store_Tick_To_Influx.h  String_Pool.h  Tick_To_Influx.h  Types.h
cxx_influx/include/mdrecorder/: CSV_To_Influx_Msg.h  Find_MDRecorder_Files.h
cxx_influx/main/: diagnose_mdrecorder.cpp  import_refdata.cpp  main.cpp  mdrecorder_to_influx.cpp  read_dir.cpp  resendfailedmsg.cpp  testtool.cpp
cxx_influx/products/include/: Product.h  Product_Center.h  Product_Filter.h  Product_Name_Map.h
cxx_influx/products/src/: Product.cpp  Product_Center.cpp  Product_Filter.cpp  Product_Name_Map.cpp
cxx_influx/python/: README  parse_qtg_inst.py  validation.py
cxx_influx/reactor/include/Foundation/: Debug.h  Disruptor.h  DisruptorPolicies.h  General.h  Mem.h  QTGInterface.h  QTGInterface.hxx  SharedMemory.h
cxx_influx/reactor/include/lcc_msg/: archive.hxx  constants.hxx  data_type.hxx  eng_status4.hxx  eng_strategy_status.hxx  execution.hxx  fixed_point.hxx  header.hxx  heartbeat2.hxx  log.hxx  logon2.hxx  logout.hxx  magic.hxx  md_data.hxx  order.hxx  serialize.hxx  serialize_msg.hxx  types.hxx  util.hxx
cxx_influx/script/: reactor_to_influx.sh  resend.py  start_main.sh
cxx_influx/src/: Configuration.cpp  Dispatch.cxx  Find_Files_In_Parallel.cpp  Find_Tick_Files.cpp  Generate_Influx_Msg.cpp  Influx_Util.cpp  Log.cpp  Post.cpp  Store_Tick_To_Influx.cpp  String_Pool.cpp  Tick_To_Influx.cpp
cxx_influx/src/mdrecorder/: CSV_To_Influx_Msg.cpp  Find_MDRecorder_Files.cpp
database_builder/: Book.py  Makefile  config.json  cron_wrapper  database_builder.py  emdi_packet_decoder.py  eurex_EMDI_decoder.py  eurex_rdd_decoder.py  get_cme_trading_hours.py  get_eurex_trading_hours.py  interfaces.xml  line2msg.cpp  liquid_capture_update_db.py  liquid_capture_update_db.sh  pcapfilter  pcapfilter.cpp  qtg_CME_file_decoder.py  qtg_EOBI_file_decoder.py  qtg_text_file_decoder.py  qtg_update_db.sh  symbol_per_day.py  update_db.sh  update_db.sh.old
database_builder/archive/: Book.cpp  a.py  eurex_eobi_decoder.py  gnupar_job_file.sh  pcapfilter.awk  qtg_text_file_decoder.py  read_p2d_pcap.py
database_builder/dashboard/: app.R  daily_check_and_stats.r  main.r  process_check_and_stats.r
database_builder/dpkt/: __init__.py  asn1.py  bgp.py  dhcp.py  diameter.py  dns.py  dpkt.py  ethernet.py  gre.py  gzip.py  h225.py  http.py  icmp.py  ieee80211.py  ip.py  ip6.py  llc.py  netflow.py  ntp.py  pcap.py  radiotap.py  rip.py  sctp.py  tcp.py  telnet.py  vrrp.py
database_builder/monitor/: server.r  ui.r
database_builder/pcapfile/: __init__.py  structs.py
doc/: func of tick db server.fig  func of tick db server.fig.bak  mixed_series.fig  spec server.lyx  spec server.lyx~
fxdatabase/: gaincapital_download.sh
influx/: audit.sh  config.json  config.json.bak  config.small.json  config_q1.json  cpaste.cpp  csv2influx.r  import.json  influx.cron.job  ref2db.r  test.json  tickdb.r
influx/tickdb/: DESCRIPTION
integrity_checks/: .gitignore  commonlib.py  env_setup.sh  pythoncore-0.0.1-py3-none-any.whl  requirements.txt
integrity_checks/bar/: bar_check.xsl  bardataaccess.py  csvcheck.py  datastore_config.py  enrichedOHLCVN.py  frontmonthtask.py  timeseries_check.xsl
integrity_checks/datautils/: dataaccess.py  dataframeutils.py  htmlprocessor.py  influxcommon.py  xmlconverter.py
libtickdb/: Database.cpp  Database.h  Mixer.cpp  Mixer.h  Return.cpp  Return.h  date_time_zonespec.csv
software/: Data_Query.py  README  getBookTradeData.py  rawsample  sample  sampletick
software/MDRec/: NanoTime.py  (+1 more)
tickdatabase/: DESCRIPTION  NAMESPACE
tickdb/: DESCRIPTION  NAMESPACE
tickstor_server/: ZFS.py
tickstor_server_project/: find_fujitsu_devices.pl  zfs_status.sh
(+88 files in other folders)
